--- a/source/MetroDark.scss
+++ b/source/MetroDark.scss
@@ -9,19 +9,23 @@
  */
 
 $base-padding: 4px;
-$base-bg: #2c2c2c;
+$base-bg: #2f2f2f;
 $base-hover: #383838;
 $base-pressed: #484848;
 $base-text: #ddd;
 $base-text-disabled: #444;
 $base-border: #1c1c1c;
-$base-border-radius: 0px;
+$base-border-radius: 2px;
 $sub-bg: #202020;
 $sub-hover: #2c2c2c;
 $sub-text: #ccc;
 $sub-highlight: #555;
 $dialog-bg: #222;
 $median-bg: #2c2c2c;
+$toolbutton-on: #3d3d3d;
+$toolbutton-border: #444;
+$toolbutton-hover: $base-hover;
+$toolbutton-pressed: $base-pressed;
 $highlight-bg: #298ce1;
 $highlight-pressed: #1979ca;
 $highlight-text: #FFF;
@@ -45,7 +49,7 @@ $slider-handle-border: #272727;
 $tab-selected: #333;
 $button-bg: #383838;
 $button-hover: #484848;
-$button-border: #272727;
+$button-border: #1c1c1c;
 $radio: url(skin:controls/radio_check_dark.svg);
 $radio_disabled: url(skin:controls/radio_check_disabled.svg);
 $checkbox: url(skin:controls/checkbox_check_dark.svg);
