--- a/source/MetroLite.scss
+++ b/source/MetroLite.scss
@@ -11,25 +11,29 @@
 $base-padding: 4px;
 $base-bg: #F2F2F2;
 $base-hover: #E5E5E5;
-$base-pressed: #CCC;
+$base-pressed: #DDD;
 $base-text: #333;
 $base-text-disabled: #BBB;
 $base-border: #D2D2D2;
-$base-border-radius: 0px;
+$base-border-radius: 2px;
 $sub-bg: #FFF;
 $sub-hover: #F5F5F5;
 $sub-text: #111;
 $sub-highlight: #D5D5D5;
 $dialog-bg: $base-bg;
 $median-bg: #FDFDFD;
+$toolbutton-on: #FFF;
+$toolbutton-border: $base-border;
+$toolbutton-hover: $base-hover;
+$toolbutton-pressed: $base-pressed;
 $highlight-bg: #298ce1;
 $highlight-pressed: #1979ca;
 $highlight-text: #FFF;
 $menu-bg: #F6F6F6;
 $menuitem-hover: #dae8ef;
 $menuitem-border: #97b5c6;
-$scrollbar-handle: #DDD;
-$scrollbar-handle-hover: #D4D4D4;
+$scrollbar-handle: #D6D6D6;
+$scrollbar-handle-hover: #DDD;
 $input-bg: #FFF;
 $input-hover: #FAFAFA;
 $control-icon: #666;
